<feat>: campo cpf substituído por telefone
- foi adicionado também validações para auxiliar o usuário a digitar o formato do telefone

--- a/Front-end/Pages/Cadastrar.razor
+++ b/Front-end/Pages/Cadastrar.razor
@@ -74,10 +74,10 @@
                     <span class="paragraph-size px-2">Matrícula <span style="color: var(--black-gray);">*</span></span>
                     <InputText id="matricula" class="custom-input form-control border-radius-10 my-1" @bind-Value="infosUser.Matricula" maxlength="10"/>
                 </div>
-                <ValidationMessage For="@(() => infosUser.Cpf)" />
+                <ValidationMessage For="@(() => infosUser.Telefone)" />
                 <div class="mb-3">
-                    <span class="paragraph-size px-2">CPF <span style="color: var(--black-gray);">*</span></span>
-                    <InputText id="cpf" class="custom-input form-control border-radius-10 my-1" @bind-Value="infosUser.Cpf" @oninput="FormatarCPF" maxlength="14" />
+                    <span class="paragraph-size px-2">Telefone</span>
+                    <InputText id="telefone" class="custom-input form-control border-radius-10 my-1" @bind-Value="infosUser.Telefone" oninput="formatTelefone(this)" onkeydown="handleKeyDown(event, this)" maxlength="20" placeholder="+xx (xx) xxxxx-xxxx" />
                 </div>
         
                 <div class="d-grid gap-2 py-2">
@@ -117,37 +117,8 @@
         [RegularExpression(@"^\d{10}$", ErrorMessage = "A Matrícula deve ter exatamente 10 dígitos.")]
         public string Matricula { get; set; }
 
-        [Required(ErrorMessage = "O campo CPF é obrigatório.")]
-        [RegularExpression(@"^(\d{3}\.\d{3}\.\d{3}-\d{2}|\d{11})$", ErrorMessage = "O formato deve ser 000.000.000-00.")]
-        public string Cpf { get; set; }
-    }
-    private void FormatarCPF(ChangeEventArgs e)
-    {
-        string input = e.Value?.ToString() ?? string.Empty;
-
-        string cpf = Regex.Replace(input, @"\D", "");
-
-        // Limita a 11 caracteres
-        if (cpf.Length > 11)
-        {
-            cpf = cpf.Substring(0, 11);
-        }
-
-        // Aplica a formatação
-        if (cpf.Length > 9)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d{3})(\d{3})(\d{2})", "$1.$2.$3-$4");
-        }
-        else if (cpf.Length > 5)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d{3})(\d{2})", "$1.$2-$3");
-        }
-        else if (cpf.Length > 2)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d+)", "$1.$2");
-        }
-
-        infosUser.Cpf = cpf;
+        [RegularExpression(@"^\+\d{2} \(\d{2}\) \d{5}-\d{4}$", ErrorMessage = "O número de telefone deve estar no formato +xx (xx) xxxxx-xxxx.")]
+        public string Telefone { get; set; }
     }
 
     private User user = new User();
@@ -188,7 +159,6 @@
             Email = user.Email,
             Senha = user.Password,
             Matricula = int.TryParse(infosUser.Matricula, out var matricula) ? matricula : 0,
-            Cpf = infosUser.Cpf,
             Telefone = 6657765,
             Curso = "Curso"
         };
