--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -104,7 +104,7 @@
                         <div class="edit-fields">
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Curso</span>
                                 <div class="mb-3">
-                                    <InputSelect id="curso" class="custom-input form-control border-radius-10 my-1" style="width: 47.5rem;" @bind-Value="infosUser.Curso">
+                                    <InputSelect id="curso" class="custom-input form-control border-radius-10 my-1 input-select-arrow" style="width: 47.5rem;" @bind-Value="infosUser.Curso">
                                         <option value="">Selecione um curso</option> <!-- Opção padrão -->
                                         <option value="Arquitetura e Urbanismo">Arquitetura e Urbanismo</option>
                                         <option value="Bacharelado Interdisciplinar em Ciência e Tecnologia">Bacharelado Interdisciplinar em Ciência e Tecnologia</option>
