--- a/Front-end/Pages/Servicos.razor
+++ b/Front-end/Pages/Servicos.razor
@@ -18,12 +18,14 @@
                 <img style="padding-right: 35px;" src="..\css\images\p-servico.svg">
 
                 <div style="padding-top: 10px;">
-                    <h1 class="weight-700" style="font-size: 3rem; color: var(--blue-ufersa);">@servico_escolhido.Nome_Profissional</h1>
-                    <h2 class="weight-500" style="font-size: 1.375rem; padding-bottom: 20px; color: var(--black-gray);">@servico_escolhido.Tipo_Servico - CRP 17/0000</h2>
-                    
-                    <div style="height: 26rem; overflow: auto; scrollbar-width: none;">
-                        <p class="paragraph-size weight-500" style="color: var(--black-gray); text-align: justify;">@servico_escolhido.Descricao</p>
-                    </div>
+                    @if(servicos != null){
+                        <h1 class="weight-700" style="font-size: 3rem; color: var(--blue-ufersa);">@servico_escolhido.Nome_Profissional</h1>
+                        <h2 class="weight-500" style="font-size: 1.375rem; padding-bottom: 20px; color: var(--black-gray);">@servico_escolhido.Tipo_Servico - CRP 17/0000</h2>
+                        
+                        <div style="height: 26rem; overflow: auto; scrollbar-width: none;">
+                            <p class="paragraph-size weight-500" style="color: var(--black-gray); text-align: justify;">@servico_escolhido.Descricao</p>
+                        </div>
+                    }
                 </div>
 
             </div>
@@ -35,19 +37,22 @@
                 </div>
 
                 <div id="scroll-container" style="@($"width: {scrollContainerWidth}px; overflow-x: auto; display: flex; scrollbar-width: none; user-select: none; margin: 0 auto;")">
-                    @for(int i = 0; i < servicos.Count; i++){
-                        var index = i;
+                    @if(servicos != null){
+                        @for(int i = 0; i < servicos.Count; i++){
+                            var index = i;
 
-                        <div class="service" style="@(i != 0 ? "margin-left: 30px;" : "margin-left: 0px;")" @onclick="() => ativarServico(servicos[index], index)">
-                            <img class="@(i == id_servico_escolhido ? "background-service-active" : "background-service") no-select" style="width: 11.75rem; height: 11.75rem;" src="..\css\images\img-servico@(i%4 + 1).svg">
-                            <div class="service-people no-select">
-                                <div style="padding-left: 10px;">
-                                    <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px; text-align: left;">@servicos[i].Nome_Profissional</h3>
-                                    <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">@servicos[i].Tipo_Servico</p>
+                            <div class="service" style="@(i != 0 ? "margin-left: 30px;" : "margin-left: 0px;")" @onclick="() => ativarServico(servicos[index], index)">
+                                <img class="@(i == id_servico_escolhido ? "background-service-active" : "background-service") no-select" style="width: 11.75rem; height: 11.75rem;" src="..\css\images\img-servico@(i%4 + 1).svg">
+                                <div class="service-people no-select">
+                                    <div style="padding-left: 10px;">
+                                        <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px; text-align: left;">@servicos[i].Nome_Profissional</h3>
+                                        <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">@servicos[i].Tipo_Servico</p>
+                                    </div>
+                                    <img src="..\css\images\servico-ex.svg">
                                 </div>
-                                <img src="..\css\images\servico-ex.svg">
                             </div>
-                        </div>
+                        }
+
                     }
                 </div>
             </div>
@@ -58,8 +63,8 @@
 </div>
 
 @code {
-    private List<ServicoModel> servicos;
-    private ServicoModel servico_escolhido;
+    private List<ServicoProfissionalModel> servicos;
+    private ServicoProfissionalModel servico_escolhido;
     private int id_servico_escolhido = 0;
 
     protected override async Task OnInitializedAsync()
@@ -68,7 +73,7 @@
         servico_escolhido = servicos[0];
     }
 
-    public void ativarServico(ServicoModel servico, int id_servico){
+    public void ativarServico(ServicoProfissionalModel servico, int id_servico){
         servico_escolhido = servico;
         id_servico_escolhido = id_servico;
     }
