--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -41,9 +41,9 @@
 
             @if (abaAtiva == "dadosPessoais"){
 
-                <div style="box-shadow: 0px 4px 4px 0px #00000040; border-radius: 20px; padding: 20px 5px; background-color: #D9D9D90D;">
-                    <div style="border-bottom: 1px solid var(--black-gray); padding-left: 10px;">
-                        <h1 style="font-size: 1.375rem; font-weight: 600;">Dados Pessoais</h1>
+                <div class="div-form-edit">
+                    <div class="div-form-header">
+                        <h1 class="div-form-h1">Dados Pessoais</h1>
                         <p class="paragraph-size weight-500" style="color: var(--black-gray);">Atualize sua foto e seus dados pessoais aqui.</p>
                     </div>
 
@@ -64,7 +64,7 @@
                                     <span class="paragraph-size weight-500" style="color: var(--black-gray);">Isso será exibido em seu perfil</span>
                                 </span>
                                 
-                                <img src="..\\css\\images\\img-ilustrativa-edit.svg">
+                                <img style="width: 5rem; height: 5rem;" src="..\\css\\images\\img-ilustrativa-edit.svg">
                                 
                                 <div>
 
@@ -117,16 +117,16 @@
                         </div>
 
                         <div style="display: flex; justify-content: flex-end; padding: 20px 40px 0px 10px;">
-                            <button style="font-size: 1rem; font-weight: 600; border: 2px solid #C3C3C340; border-radius: 6px; background-color: transparent; padding: 6px 15px;" @onclick="Cancelar" type="button">Cancelar</button>
-                            <button style="font-size: 1rem; font-weight: 600; border: 2px solid #C3C3C340; border-radius: 6px; background-color: var(--blue-ufersa); color: var(--white); padding: 6px 15px; margin-left: 20px;" type="submit">Salvar</button>
+                            <button style="background-color: transparent;" class="button-edit" @onclick="Cancelar" type="button">Cancelar</button>
+                            <button style="background-color: var(--blue-ufersa); color: var(--white); margin-left: 20px;" class="button-edit" type="submit">Salvar</button>
                         </div>
                     </EditForm>
                 </div>
             } else if (abaAtiva == "conta"){
 
-                <div style="box-shadow: 0px 4px 4px 0px #00000040; border-radius: 20px; padding: 20px 5px; background-color: #D9D9D90D;">
-                    <div style="border-bottom: 1px solid var(--black-gray); padding-left: 10px;">
-                        <h1 style="font-size: 1.375rem; font-weight: 600;">Conta</h1>
+                <div class="div-form-edit">
+                    <div class="div-form-header">
+                        <h1 class="div-form-h1">Conta</h1>
                         <p class="paragraph-size weight-500" style="color: var(--black-gray);">Atualize os dados da sua conta aqui.</p>
                     </div>
 
@@ -170,13 +170,13 @@
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Excluir Perfil</span>
                                 <div style="display: flex; flex-wrap: wrap;">
                                     <span class="weight-500 paragraph-size" style="color: var(--black-gray); width: 100%;">Exclua sua conta e todos os seus dados de origem. Isso é irreversível.</span>
-                                    <button style="font-size: 1rem; font-weight: 600; border: 2px solid #C3C3C340; border-radius: 6px; background-color: #D20240; color: var(--white); padding: 6px 15px; margin: 20px 0px;">Excluir Conta</button>
+                                    <button style="background-color: #D20240; color: var(--white); margin: 20px 0px;" class="button-edit">Excluir Conta</button>
                                 </div>
                         </div>
 
                         <div style="display: flex; justify-content: flex-end; padding: 20px 40px 0px 10px;">
-                            <button style="font-size: 1rem; font-weight: 600; border: 2px solid #C3C3C340; border-radius: 6px; background-color: transparent; padding: 6px 15px;" @onclick="Cancelar" type="button">Cancelar</button>
-                            <button style="font-size: 1rem; font-weight: 600; border: 2px solid #C3C3C340; border-radius: 6px; background-color: var(--blue-ufersa); color: var(--white); padding: 6px 15px; margin-left: 20px;" type="submit">Salvar</button>
+                            <button style="background-color: transparent;" @onclick="Cancelar" class="button-edit" type="button">Cancelar</button>
+                            <button style="background-color: var(--blue-ufersa); color: var(--white); margin-left: 20px;" class="button-edit" type="submit">Salvar</button>
                         </div>
                     </EditForm>
                 </div>
