<refactor>: estilo dos inputs

--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -356,3 +356,9 @@
         return (partes[0], partes[1]);
     }
 }
+
+<style>
+    .custom-input{
+        border: 2px solid var(--black-gray);
+    }
+</style>
